# annotate_pdf_from_remarks

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
images/: sources_visual_abstract.pptx
src/annotate_pdf_from_remarks/: __init__.py  annotate.py  cli.py  line_index.py  remarks_parser.py
tests/: conftest.py  test_annotate.py  test_cli.py  test_line_index.py  test_remarks_parser.py
tests/test_data/: build_sample_pdf.py  example_remarks.md
